syntax = "proto3";
package cosmos_proto;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/cosmos/cosmos-proto";

extend google.protobuf.MessageOptions {
    // implements_interface is used to annotate interface implementations
    string implements_interface = 93001;
}

extend google.protobuf.FieldOptions {
    // accepts_interface is used to annote fields that accept interfaces
    string accepts_interface = 93001;
    // scalar is used to define scalar types
    string scalar = 93002;

    // go_type defines a custom go type for the field.
    // NOTE: it is not valid for repeated and map fields.
    string go_type = 93003;
}
